examples/test/testpolicy3432.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3432
  namespace: namespace60
spec:
  podSelector:
    matchLabels:
      key43: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value10
          key16: value37
      podSelector:
        matchLabels:
          key45: value16
          key20: value7
